// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionSection /> should render component when answered 1`] = `
<div
  className="sc-jTzLTM cuYolR"
>
  <div
    className="sc-fjdhpX bCXXwx"
  >
    <div
      className="sc-cSHVUG kkLwnz"
    >
      1
       / 
      10
    </div>
    <div
      className="sc-bwzfXH ieGOie"
      style={
        Object {
          "margin": "auto",
        }
      }
    >
      <div
        className="sc-htpNat eaelvy"
      >
        <div
          className="sc-bxivhb cIIvqJ"
        >
          初句
        </div>
        <div
          className="sc-ifAKCX ejiZuo"
        >
          二句
        </div>
        <div
          className="sc-EHOje fUTEIU"
        >
          三句
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-jzJRlG hRablJ"
  >
    <div
      className="sc-bZQynM dHTFQz"
      onMouseDown={[Function]}
    >
      <div
        className="sc-htoDjs cJgBBz"
        color="#a9a9a980"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
          }
        }
      >
        <div
          className="sc-dnqmqq kveNia"
        >
          <div
            className="sc-iwsKbI TuLDV"
          >
            よんく
          </div>
          <div
            className="sc-gZMcBi gcZWDp"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM dHTFQz"
      onMouseDown={[Function]}
    >
      <div
        className="sc-htoDjs cJgBBz"
        color="#a9a9a980"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
          }
        }
      >
        <div
          className="sc-dnqmqq kveNia"
        >
          <div
            className="sc-iwsKbI TuLDV"
          >
            よんく
          </div>
          <div
            className="sc-gZMcBi gcZWDp"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM dHTFQz"
      onMouseDown={[Function]}
    >
      <div
        className="sc-htoDjs cJgBBz"
        color="#a9a9a980"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
          }
        }
      >
        <div
          className="sc-dnqmqq kveNia"
        >
          <div
            className="sc-iwsKbI TuLDV"
          >
            よんく
          </div>
          <div
            className="sc-gZMcBi gcZWDp"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM dHTFQz"
      onMouseDown={[Function]}
    >
      <div
        className="sc-htoDjs cJgBBz"
        color="#a9a9a980"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
          }
        }
      >
        <div
          className="sc-dnqmqq kveNia"
        >
          <div
            className="sc-iwsKbI TuLDV"
          >
            よんく
          </div>
          <div
            className="sc-gZMcBi gcZWDp"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gqjmRU kuYurp"
    onClick={[MockFunction]}
  >
    <img
      className="sc-VigVT hNxByC"
      src="check_correct.png"
    />
  </div>
</div>
`;

exports[`<QuestionSection /> should render component when not answered 1`] = `
<div
  className="sc-jTzLTM cuYolR"
>
  <div
    className="sc-fjdhpX bCXXwx"
  >
    <div
      className="sc-cSHVUG kkLwnz"
    >
      1
       / 
      10
    </div>
    <div
      className="sc-bwzfXH ieGOie"
      style={
        Object {
          "margin": "auto",
        }
      }
    >
      <div
        className="sc-htpNat eaelvy"
      >
        <div
          className="sc-bxivhb cIIvqJ"
        >
          初句
        </div>
        <div
          className="sc-ifAKCX ejiZuo"
        >
          二句
        </div>
        <div
          className="sc-EHOje fUTEIU"
        >
          三句
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-jzJRlG hRablJ"
  >
    <div
      className="sc-bZQynM dHTFQz"
      onMouseDown={[Function]}
    >
      <div
        className="sc-htoDjs cJgBBz"
        color="#a9a9a980"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
          }
        }
      >
        <div
          className="sc-dnqmqq kveNia"
        >
          <div
            className="sc-iwsKbI TuLDV"
          >
            よんく
          </div>
          <div
            className="sc-gZMcBi gcZWDp"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM dHTFQz"
      onMouseDown={[Function]}
    >
      <div
        className="sc-htoDjs cJgBBz"
        color="#a9a9a980"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
          }
        }
      >
        <div
          className="sc-dnqmqq kveNia"
        >
          <div
            className="sc-iwsKbI TuLDV"
          >
            よんく
          </div>
          <div
            className="sc-gZMcBi gcZWDp"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM dHTFQz"
      onMouseDown={[Function]}
    >
      <div
        className="sc-htoDjs cJgBBz"
        color="#a9a9a980"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
          }
        }
      >
        <div
          className="sc-dnqmqq kveNia"
        >
          <div
            className="sc-iwsKbI TuLDV"
          >
            よんく
          </div>
          <div
            className="sc-gZMcBi gcZWDp"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM dHTFQz"
      onMouseDown={[Function]}
    >
      <div
        className="sc-htoDjs cJgBBz"
        color="#a9a9a980"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
          }
        }
      >
        <div
          className="sc-dnqmqq kveNia"
        >
          <div
            className="sc-iwsKbI TuLDV"
          >
            よんく
          </div>
          <div
            className="sc-gZMcBi gcZWDp"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
